// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bookmarkLabel renders 0 1`] = `
Array [
  .c0 {
  bookmark-label: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLabel renders function 1`] = `
Array [
  .c0 {
  bookmark-label: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: has;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: has;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLabel renders invalid theme path 1`] = `
Array [
  .c0 {
  bookmark-label: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLabel renders negative number 1`] = `
Array [
  .c0 {
  bookmark-label: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLabel renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    bookmark-label: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-label: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    bookmark-label: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-label: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-label: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-label: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-label: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLabel renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    bookmark-label: July;
  }
}

@media April {
  .c0 {
    bookmark-label: August;
  }
}

@media January {
  .c0 {
    bookmark-label: September;
  }
}

@media April {
  .c0 {
    bookmark-label: November;
  }
}

@media June {
  .c0 {
    bookmark-label: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    bookmark-label: July;
  }
}

@media April {
  .c0 {
    bookmark-label: August;
  }
}

@media January {
  .c0 {
    bookmark-label: September;
  }
}

@media April {
  .c0 {
    bookmark-label: November;
  }
}

@media June {
  .c0 {
    bookmark-label: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-label: January;
  }
}

@media April {
  .c0 {
    bookmark-label: December;
  }
}

@media January {
  .c0 {
    bookmark-label: April;
  }
}

@media April {
  .c0 {
    bookmark-label: May;
  }
}

@media June {
  .c0 {
    bookmark-label: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-label: January;
  }
}

@media April {
  .c0 {
    bookmark-label: December;
  }
}

@media January {
  .c0 {
    bookmark-label: April;
  }
}

@media April {
  .c0 {
    bookmark-label: May;
  }
}

@media June {
  .c0 {
    bookmark-label: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLabel renders postitive number 1`] = `
Array [
  .c0 {
  bookmark-label: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLabel renders string 1`] = `
Array [
  .c0 {
  bookmark-label: July;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: July;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: June;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: June;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLabel renders valid theme path 1`] = `
Array [
  .c0 {
  bookmark-label: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-label: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
